modify connection string with Azure info

--- a/HW8/Hmwk8/Hmwk8/Web.config
+++ b/HW8/Hmwk8/Hmwk8/Web.config
@@ -79,6 +79,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="HW8Context" connectionString="data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\Auctions.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="HW8Context" connectionString="Server=tcp:hw9auctions.database.windows.net,1433;Initial Catalog=AuctionsDB;Persist Security Info=False;User ID=XX;Password=XXXXXXXXXXXX;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
